<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:orientation="vertical" android:background="@drawable/background"
	android:gravity="center">
	<ScrollView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:id="@+id/scrollView1"
		android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
		android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true" android:layout_marginLeft="120dp">
		<LinearLayout android:id="@+id/linearLayout1"
			android:layout_width="wrap_content" android:layout_height="wrap_content">
			<RelativeLayout android:layout_width="wrap_content"
				android:id="@+id/linearLayout2" android:layout_marginRight="5dp"
				android:layout_marginTop="10dp" android:layout_height="wrap_content" android:layout_marginBottom="10dp">
				<ImageView android:src="@drawable/seta_titulo"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:id="@+id/imageView1" android:layout_marginTop="5dp"></ImageView>
				<TextView android:textColor="#000000" android:text="@string/ajuda_pre"
					android:layout_width="wrap_content" android:layout_alignParentTop="true"
					android:layout_height="wrap_content" android:layout_marginLeft="10dp"
					android:layout_toRightOf="@+id/imageView1" android:id="@+id/localidade"
					android:textSize="22dp"></TextView>
				<TextView android:textColor="#000000"
					android:text="@string/ajuda_texto_pre_requisitos"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:id="@+id/texto_pre" android:layout_below="@+id/localidade"
					android:layout_alignParentLeft="true" android:layout_marginTop="10dp"
					android:textSize="16dp"></TextView>
				<ImageView android:src="@drawable/seta_titulo"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:id="@+id/ImageView01" android:layout_below="@+id/texto_pre"
					android:layout_toLeftOf="@+id/localidade" android:layout_marginTop="20dp"></ImageView>
				<TextView android:textColor="#000000" android:text="@string/ajuda_texto_rotas"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:id="@+id/TextView02" android:layout_below="@+id/ImageView01"
					android:layout_alignParentLeft="true" android:layout_marginTop="10dp"
					android:textSize="16dp"></TextView>
				<ImageView android:src="@drawable/seta_titulo"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:id="@+id/ImageView02" android:layout_below="@+id/TextView02"
					android:layout_toLeftOf="@+id/TextView01" android:layout_marginTop="20dp"></ImageView>
				<TextView android:textColor="#000000" android:text="@string/ajuda_rotas"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:id="@+id/TextView01" android:textSize="22dp"
					android:layout_above="@+id/TextView02" android:layout_toRightOf="@+id/ImageView01"
					android:layout_marginLeft="16dp"></TextView>
				<TextView android:textColor="#000000" android:text="@string/ajuda_onibus"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:id="@+id/TextView03" android:textSize="22dp"
					android:layout_alignBottom="@+id/ImageView02"
					android:layout_toRightOf="@+id/ImageView02"
					android:layout_marginLeft="16dp"></TextView>
				<TextView android:textColor="#000000" android:text="@string/ajuda_texto_onibus"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:id="@+id/TextView04" android:textSize="16dp"
					android:layout_below="@+id/ImageView02"
					android:layout_alignParentLeft="true" android:layout_marginTop="10dp"></TextView>
				<ImageView android:src="@drawable/seta_titulo"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:id="@+id/ImageView03" android:layout_below="@+id/TextView04"
					android:layout_alignParentLeft="true" android:layout_marginTop="20dp"></ImageView>
				<TextView android:textColor="#000000" android:text="@string/ajuda_rotas_favoritas"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:id="@+id/TextView05" android:textSize="22dp"
					android:layout_alignTop="@+id/ImageView03"
					android:layout_toRightOf="@+id/ImageView03"
					android:layout_marginLeft="10dp"></TextView>
				<TextView android:textColor="#000000" android:text="@string/ajuda_texto_rotas_favoritas"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:id="@+id/TextView06" android:textSize="16dp"
					android:layout_below="@+id/TextView05"
					android:layout_alignParentLeft="true" android:layout_marginTop="10dp"></TextView>
				
				<ImageView android:src="@drawable/seta_titulo"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:id="@+id/ImageView06" android:layout_below="@+id/TextView06"
					android:layout_alignParentLeft="true" android:layout_marginTop="20dp"></ImageView>
				<TextView android:textColor="#000000" android:text="@string/ajuda_pontos_turisticos"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:id="@+id/TextView09" android:textSize="22dp"
					android:layout_alignTop="@+id/ImageView06"
					android:layout_toRightOf="@+id/ImageView06"
					android:layout_marginLeft="10dp"></TextView>
				<TextView android:textColor="#000000" android:text="@string/ajuda_texto_pontos_turisticos"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:id="@+id/TextView10" android:textSize="16dp"
					android:layout_below="@+id/TextView09"
					android:layout_alignParentLeft="true" android:layout_marginTop="10dp"></TextView>
				
			</RelativeLayout>
		</LinearLayout>
	</ScrollView>
</RelativeLayout>