<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/background">
    <ScrollView android:layout_height="wrap_content" android:id="@+id/scrollView1" android:layout_width="match_parent">
    </ScrollView>
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/botao_alterar_normal" android:layout_margin="15dp" android:id="@+id/botaoAlterarCidade" android:layout_alignParentBottom="true" android:layout_alignParentRight="true" android:layout_marginBottom="18dp"></ImageView>
    <TextView android:layout_width="wrap_content" android:id="@+id/tarifa_cidade" android:layout_height="wrap_content" android:text="@string/texto_tarifa" android:textColor="#000000" android:textSize="12dp" android:layout_above="@+id/botaoAlterarCidade" android:layout_alignRight="@+id/botaoAlterarCidade"></TextView>
    <TextView android:layout_width="wrap_content" android:id="@+id/localidade" android:layout_height="wrap_content" android:text="@string/cidade_titulo_inicial" android:textColor="#000000" android:textSize="22dp" android:layout_below="@+id/scrollView1" android:layout_alignRight="@+id/tarifa_cidade" android:layout_margin="15dp"></TextView>
    <TextView android:layout_width="wrap_content" android:id="@+id/nome_cidade" android:layout_height="wrap_content" android:text="@string/titulo_campinagrande" android:textColor="#000000" android:textSize="16dp" android:layout_below="@+id/localidade" android:layout_alignRight="@+id/localidade"></TextView>
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:id="@+id/linearLayout1" android:layout_alignParentLeft="true" android:layout_below="@+id/nome_cidade" android:layout_above="@+id/tarifa_cidade">
        <TextView android:layout_marginLeft="10dp" android:id="@+id/descricao_cidade" android:layout_width="192dp" android:text="@string/cidade_campinagrande" android:textColor="#000000" android:layout_marginRight="15dp" android:layout_gravity="right" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:textSize="12dp"></TextView>
    </LinearLayout>
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/seta_titulo" android:id="@+id/imageView1" android:layout_alignTop="@+id/localidade" android:layout_toLeftOf="@+id/tarifa_cidade"></ImageView>

</RelativeLayout>