<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="left|center"
	android:paddingBottom="5sp"
	android:paddingTop="5sp"
	android:paddingLeft="5sp"
	android:clickable="false">
	
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="110dp"
	    android:layout_alignParentLeft="true"
	    android:layout_centerVertical="true"
	    android:layout_weight="1"
	    android:orientation="horizontal" 
	    android:clickable="false">
	    
	    <RelativeLayout
	        android:layout_width="60dp"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" 
		    android:clickable="false">
	        
	        <ImageView
		        android:id="@+id/icone_list_rota"
		        android:layout_width="60dp"
		        android:layout_height="60dp"
		        android:layout_marginTop="15dp"
		        android:src="@drawable/route_list"/>
	        
	    </RelativeLayout>
	    
	    <LinearLayout
	        android:layout_marginLeft="10dp"
	        android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" 
		    android:clickable="false">
		        
	        
	        <!-- NOME DA ROTA. CONCATENAR COM COR -->
		    <TextView
		        android:id="@+id/list_routeName"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="2dp"
		        android:textStyle="bold"
		        android:textColor="#0000FF"
		        android:textSize="14dp" />
		    
		    <TextView
		        android:id="@+id/list_num"
		        android:text="@string/num_onibus"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="2dp"
		        android:textColor="#000000"
		        android:textSize="12dp" />
		    	    
		    <TextView
		        android:id="@+id/list_dif"
		        android:text="@string/dif_onibus"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="2dp"
		        android:textColor="#000000"
		        android:textSize="12dp" />
		    	    
		    <TextView
		        android:id="@+id/list_h1"
		        android:text="@string/hora_inicio"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="2dp"
		        android:textColor="#000000"
		        android:textSize="12dp" />
		    	    
		    <TextView
		        android:id="@+id/list_hf"
		        android:text="@string/hora_fim"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="2dp"
		        android:textColor="#000000"
		        android:textSize="12dp" />
	        
	    </LinearLayout>
	    
	</LinearLayout>
    
</RelativeLayout>