<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="270dp"
    android:layout_height="100dp"
    android:layout_gravity="right"
    android:background="@drawable/label_botoes_busca"
    android:gravity="center_vertical" 
    android:orientation="horizontal" >
    
    
    <ImageView
		android:id="@+id/botao_icone_buscar_onibus"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="87dp"
	    android:clickable="true"
	    android:src="@drawable/icone_onibus_normal" />
	        
	<TextView 
	    android:id="@+id/label_linha"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textColor="#000000"
	    android:layout_marginLeft="105dp"
	    android:textSize="12dp"
	    android:layout_below="@+id/botao_icone_buscar_onibus"
	    android:gravity="center"
	    android:text="@string/busca_label_onibus"/>
	
	<ImageView
	    android:id="@+id/botao_icone_buscar_ponto"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_toRightOf="@+id/botao_icone_buscar_onibus"
	    android:layout_marginLeft="10dp"
	    android:clickable="true"
	    android:src="@drawable/icone_rotas_normal" />
	        
	<TextView 
	    android:id="@+id/label_rota"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textColor="#000000"
	    android:layout_toRightOf="@+id/label_linha"
	    android:layout_below="@+id/botao_icone_buscar_ponto"
	    android:layout_marginLeft="32dp"
	    android:textSize="12dp"
	    android:gravity="center"
	    android:text="@string/busca_label_rota"/>
	
	<ImageView
	    android:id="@+id/botao_icone_rotas_favoritas"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_toRightOf="@+id/botao_icone_buscar_ponto"
	    android:layout_marginLeft="18dp"
	    android:clickable="true"
	    android:src="@drawable/icone_mapa_norrnal" />

	<TextView
	    android:layout_width="68dp"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="23dp"
	    android:layout_toRightOf="@+id/label_rota"
	    android:layout_below="@+id/botao_icone_rotas_favoritas"
	    android:text="@string/busca_label_favoritos"
	    android:textColor="#000000"
	    android:textSize="12dp" />
    

</RelativeLayout>