<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="65dp"
        android:layout_gravity="right"
        android:background="@drawable/label_botoes_busca"
        android:gravity="center_vertical" 
        android:orientation="horizontal">
        
        
	    <LinearLayout
	        android:layout_width="50dp"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="85dp"
	        android:orientation="vertical">
	        
	       <ImageView
	            android:id="@+id/buscarOnibus"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:clickable="true"
	            android:src="@drawable/icone_onibus_normal" />
	        
	       <TextView 
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:textColor="#000000"
	           android:layout_marginLeft="8dp"
	           android:textSize="8dp"
	           android:gravity="center"
	           android:text="@string/busca_label_onibus"/>
	       
	    </LinearLayout>
	        
	    
	    <LinearLayout
	        android:layout_width="50dp"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:orientation="vertical">
	        
	      <ImageView
	            android:id="@+id/buscarPonto"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:clickable="true"
	            android:src="@drawable/icone_rotas_normal" />
	        
	       <TextView 
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:textColor="#000000"
	           android:layout_marginLeft="10dp"
	           android:textSize="8dp"
	           android:gravity="center"
	           android:text="@string/busca_label_rota"/>
	       
	    </LinearLayout>
	
	        
	    <LinearLayout
	        android:layout_width="50dp"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:orientation="vertical">
	        
	      <ImageView
	            android:id="@+id/rotasFavoritas"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:clickable="true"
	            android:src="@drawable/icone_mapa_norrnal" />

	       <TextView
	           android:layout_width="68dp"
	           android:layout_height="wrap_content"
	           android:layout_marginLeft="2dp"
	           android:text="@string/busca_label_favoritos"
	           android:textColor="#000000"
	           android:textSize="8dp" />
	       
	    </LinearLayout>
         
         
    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="90dp"
        android:orientation="horizontal"
        android:gravity="right">

        <EditText
            android:id="@+id/paramBusca"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:gravity="center" />

        <ImageView
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/botao_seach_normal_digitando" />
        
    </LinearLayout>
        
</LinearLayout>